syntax = "proto3";

package fpga;

// The gPRC service definition.
service BlockRPC {
  // Sends a block
  rpc SendBlockData (BlockRequest) returns (BlockReply) {}
}

// The request containing the block struct.
message BlockRequest {
    uint64 block_id = 1;
    bool cold_start = 2;
    uint32 tx_count = 3;

    // transaction
    message Transaction {

        message SignatureStruct {
            bytes sign_r = 1; // checked with Xiaohan and Shiwen, use bytes instead of string
            bytes sign_w = 2;
            bytes pk_x = 3;
            bytes pk_y = 4;
            bytes e = 5;
            bool   dbg_sg_valid = 6;
        }

        message ReadStruct {
            string key = 1;
            bytes version = 2; // 硬件version前64位bid, 后面256位是tid。不全的高位补零 from Shiwen // big endian from Xiaohan
            string dbg_val = 3;
            bool   dbg_is_del = 4;
            bool   dbg_rd_valid = 5;
        }

        message WriteStruct {
            string key = 1;
            bytes value = 2; // in Fabric, these fields (value, version) are bytes. They cannot be string because they are not valid utf-8. pb error: Marshal data error: proto: field "fpga.BlockRequest.Transaction.WriteStruct.Value" contains invalid UTF-8
            bool is_del = 3;
            bytes cs_version = 4; // only for cold start
        }

        string tx_id = 1;
        uint32 indexInBlock = 2;
        uint32 rd_count = 3;
        uint32 wt_count = 4;
        uint32 sg_count = 5;
        bool   dbg_tx_valid = 6;

        repeated SignatureStruct signatures = 7;
        repeated ReadStruct reads = 8;
        repeated WriteStruct writes = 9;
    }

    repeated Transaction tx = 4;
    uint32 crc = 5;
}

// The response containing the true or false Boolean value. 
message BlockReply {

    uint64 block_id = 1;

    // transaction
    message TXReply {
        string tx_id = 1;
        uint32 indexInBlock = 2;
        bool tx_valid = 3;
        bool sg_valid = 4;

        message ReadReply {
            string rd_key = 1;
            bool rd_valid = 2;
        }
        
        repeated ReadReply rd_checks = 5; // TXReply need to be put in the indexInBlock position. Else Fabric will need to interate through the BlockReply.
    }

    repeated TXReply tx_replies = 2;
}


